mobile/scss/modules/profile.scss
.button.button-small.button-icon:before {
  font-size: 26px !important;
}

$profile-subheader-height : $bar-midsize-height - $bar-height - 20px;

$photo-dimension : $profile-subheader-height * 1.1;

.profile-screen {
    

  .contacts-amount{
    color: #fff;
    
    &:after{
      content: 'convoy';
      position: absolute;
      top: 15px;
      left: 0;
      font-size: 11px;
      text-align: left;
    }

    .badge{
      position: absolute;
      left: -5px;
      top: 8px;
      font-size: 10px;
      min-width: 0;
      padding: 3px 5px;
      line-height: 10px;
    }

    strong{
      vertical-align: middle;
      font-size: 13px;
    }
  }
}

.profile-visual{
  position: absolute;
  top: $bar-height; 
  left: 10px;
  right: 10px;
  height: $profile-subheader-height;
  text-align: center;
  z-index: 2;
  
  .platform-android & {
    top: $bar-height; 
  }
  
  .platform-ios & {
    top: $bar-height + $ios-statusbar-height !important;
  }

  .photo{
    display: inline-block;
    vertical-align: top;
    width: $photo-dimension;
    height: $photo-dimension;
    background: #333 url('../img/bg-profile-default.jpg') 50% no-repeat;
    -webkit-background-size: $photo-dimension $photo-dimension;
    background-size: $photo-dimension $photo-dimension;
    border: 2px solid #8C8B8B;
    text-align: center;
    @include rounded-corner(100%);

    img{
      @include rounded-corner(100%);
      width: 100%;
      vertical-align: top;
    }
  }
  
  
  .contacts-amount{
    position: absolute;
    left: 0;
    bottom: 5px;
    padding-bottom: 15px;
    padding-top: 15px;
    padding-right: 15px;
    color: #fff;
    
    &:after {
        content: none;
    }

    // &:after{
    //   content: 'Friends';
    //   position: absolute;
    //   bottom: 0;
    //   left: -2px;
    //   font-size: 11px;
    //   right: -6px;
    //   text-align: center;
    //   margin-top: -1px;
    // }

    .badge{
      position: absolute;
      left: -5px;
      top: 8px;
      font-size: 10px;
      min-width: 0;
      padding: 3px 5px;
      line-height: 10px;
    }

    strong{
      vertical-align: middle;
      font-size: 13px;
    }
  }

  .handle{
    position: absolute;
    right: 0;
    bottom: 20px;
    width: 33%;
    line-height: 25px;
    color: #fff;

    strong{
      display: block;
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
    }
  }

  &.compact{
    position: static;
    left: auto;
    top:auto;
    right: auto;
    bottom: auto;
    height: auto;
    overflow: hidden;
    padding-top: $bar-height;
    padding-left: 13px;
    padding-right: 13px;
    padding-bottom: 0;
  
    .platform-ios & {
        padding-top: $bar-height + $ios-statusbar-height !important;
    }

    .photo{
      float: left;
      width: 60px;
      height: 60px;
      margin-right: 15px;
      -webkit-background-size: 60px 60px;
      background-size: 60px 60px;
    }
    .text{
      color: $light;
      padding-top: 11px;
      overflow: hidden;
      text-align:left;
      
      .title {
        font-size: 1.3em;
        font-weight: 500;
        margin-bottom: 5px;
      }
      
      .profile-handle {
        font-size: 0.9em;
        font-weight: 500;
        margin-left: 5px;
      }

      em {
        color: $stable;
        font-size: 12px;
      }

    }
  }
}

.profile-handle {
  color: $energized;
}

.profile-tabs{
  position: absolute;
  top: 0;
  left: 0;
  bottom: $tabs-height;
  right: 0;
  z-index: 1;

    > .tab-nav{
      top: 0 !important;
      position: absolute;
      left: 0;
      right: 0;
      height: $tabs-height;
      background: $ribbon-bg;
      text-transform: uppercase;
      padding: 0;
      color: $secondary-text-action;

      .tab-item{
        font-weight: bold;
        font-size: $tabs-text-font-size;
        padding: ($tabs-height/2 - $tabs-text-font-size/2) 0;
        line-height: $tabs-text-font-size * $line-height-base;
        color: #999;

        &.tab-item-active{
          color: $light;
        }
      }
    }

    .tab-content{
      padding-top: 70px;
      background: #eee;

      .content-button{
        position: absolute;
        left: 0;
        bottom: 0;
        width: 100%;
        font-size: 14px;
        min-height: 44px;
        border-width: 1px 0 0;

        .ico{
          margin-right: 10px;
          vertical-align: middle;
        }
      }
    }
}

.reviews-list{
  .item{
    margin-bottom: 2px;

    > .ico{
      float: left;
      margin-right: 15px;
    }

    .review{
      overflow: hidden;

      .top{
        padding: 3px 0 5px;
        overflow: hidden;
        height: auto;

        .rating{
          font-size: 17px;

          li{
            float: left;

            i{color: #3b9fa1;}
          }
        }

        .time{
          float: right;
        }
      }

      .title{
        display: block;
        overflow: hidden;
        text-overflow: ellipsis;
        padding: 0 0 5px;
      }
      .message{
        margin: 0 0 5px;
        display: block;
        display: -webkit-box;
        overflow: hidden;
        white-space: normal;
        text-overflow: ellipsis;
        -webkit-box-orient: vertical;
        -webkit-line-clamp: 3;
      }
      .button-holder{
        overflow: hidden;

        button{
          float: right;
          padding: 0 25px;
          min-height: 26px;
        }
      }
    }
  }
}

.button {
    &.button-pos-tr {
        // position: relative;
        // top: 10px;
        // right: 10px;
        float: right;
        top: -15px;
        // max-height: 20px;
        // min-height: 18px;
    }
}
/* ... */

